--- a/angular/package.json
+++ b/angular/package.json
@@ -23,21 +23,23 @@
         "@angular/router": "^5.2.0",
         "core-js": "^2.4.1",
         "rxjs": "^5.5.6",
+        "tslib": "^1.9.0",
         "zone.js": "^0.8.19",
         "angular-pipes": "^6.5.2",
         "ng2-datepicker": "^2.2.0",
         "date-fns": "^1.29.0"
     },
     "devDependencies": {
-        "@angular/cli": "~1.7.1",
+        "@angular-devkit/build-angular": "~0.13.0",
+        "@angular/cli": "^7.3.1",
         "@angular/compiler-cli": "^5.2.0",
         "@angular/language-service": "^5.2.0",
-        "@types/jasmine": "~2.8.3",
+        "@types/jasmine": "^2.8.16",
         "@types/jasminewd2": "~2.0.2",
         "@types/node": "~6.0.60",
         "codelyzer": "^4.0.1",
         "ts-node": "~4.1.0",
         "tslint": "~5.9.1",
-        "typescript": "~2.6.2"
+        "typescript": "~2.9.2"
     }
 }
