--- a/node-ts/package.json
+++ b/node-ts/package.json
@@ -21,24 +21,25 @@
     },
     "dependencies": {
         "body-parser": "^1.18.2",
+        "chalk": "^2.3.1",
+        "collections": "^5.1.8",
         "compression": "^1.7.2",
         "connect-mongo": "^2.0.1",
+        "cors": "^2.8.4",
         "dotenv": "^5.0.0",
+        "escape-html": "^1.0.3",
         "express": "^4.16.2",
         "express-validator": "^4.2.0",
-        "escape-html": "^1.0.3",
-        "mongoose": "^5.0.6",
-        "uuid": "^3.2.1",
-        "ioredis": "^3.2.2",
-        "node-cache": "^4.1.1",
-        "morgan": "^1.9.0",
-        "passport": "^0.4.0",
-        "winston": "^2.4.0",
-        "passport-jwt": "^3.0.1",
-        "jsonwebtoken": "^8.1.1",
         "helmet": "^3.11.0",
-        "chalk": "^2.3.1",
-        "cors": "^2.8.4"
+        "ioredis": "^3.2.2",
+        "jsonwebtoken": "^8.1.1",
+        "mongoose": "^5.0.6",
+        "morgan": "^1.9.0",
+        "node-cache": "^4.1.1",
+        "passport": "^0.4.0",
+        "passport-jwt": "^3.0.1",
+        "uuid": "^3.2.1",
+        "winston": "^2.4.0"
     },
     "devDependencies": {
         "@types/body-parser": "^1.16.8",
