Program is now running

--- a/angular/src/tsconfig.json
+++ b/angular/src/tsconfig.json
@@ -2,6 +2,7 @@
 	"compilerOptions": {
 		"baseUrl": "",
 		"declaration": false,
+		"skipLibCheck": true,
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
 		"lib": [
