--- a/node-ts/package.json
+++ b/node-ts/package.json
@@ -21,53 +21,55 @@
     },
     "dependencies": {
         "body-parser": "^1.18.2",
+        "chalk": "^2.3.1",
         "compression": "^1.7.2",
-        "connect-mongo": "^2.0.1",
+        "connect-mongo": "^4.4.1",
+        "cors": "^2.8.4",
         "dotenv": "^5.0.0",
+        "escape-html": "^1.0.3",
         "express": "^4.16.2",
         "express-validator": "^4.2.0",
-        "escape-html": "^1.0.3",
-        "mongoose": "^5.0.6",
-        "uuid": "^3.2.1",
-        "ioredis": "^3.2.2",
-        "node-cache": "^4.1.1",
-        "morgan": "^1.9.0",
-        "passport": "^0.4.0",
-        "winston": "^2.4.0",
-        "passport-jwt": "^3.0.1",
-        "jsonwebtoken": "^8.1.1",
         "helmet": "^3.11.0",
-        "chalk": "^2.3.1",
-        "cors": "^2.8.4"
+        "ioredis": "^3.2.2",
+        "jsonwebtoken": "^8.1.1",
+        "mongoose": "^5.13.0",
+        "morgan": "^1.9.0",
+        "node-cache": "^4.1.1",
+        "passport": "^0.4.0",
+        "passport-jwt": "^3.0.1",
+        "uuid": "^3.2.1",
+        "winston": "^2.4.0"
     },
     "devDependencies": {
         "@types/body-parser": "^1.16.8",
+        "@types/compression": "^0.0.35",
         "@types/connect-mongo": "^0.0.35",
+        "@types/cors": "^2.8.3",
         "@types/dotenv": "^4.0.2",
-        "@types/express": "^4.11.1",
-        "@types/jest": "^21.1.3",
-        "@types/mongodb": "^3.0.5",
-        "@types/mongoose": "^5.0.2",
-        "@types/uuid": "^3.4.3",
-        "@types/ioredis": "^3.2.5",
         "@types/escape-html": "^0.0.20",
-        "@types/node-cache": "^4.1.1",
+        "@types/express-session": "1.15.16",
+        "@types/express": "^4.11.1",
+        "@types/helmet": "^0.0.37",
+        "@types/ioredis": "^3.2.5",
+        "@types/jasmine": "2.8.8",
+        "@types/jest": "^21.1.3",
+        "@types/jsonwebtoken": "^7.2.5",
+        "@types/mongodb": "^3.6.18",
+        "@types/mongoose": "^5.11.97",
         "@types/morgan": "^1.7.35",
         "@types/node": "^8.9.4",
+        "@types/node-cache": "^4.1.1",
         "@types/passport": "^0.4.3",
         "@types/passport-jwt": "^3.0.1",
-        "@types/helmet": "^0.0.37",
-        "@types/cors": "^2.8.3",
-        "@types/compression": "^0.0.35",
-        "@types/jsonwebtoken": "^7.2.5",
+        "@types/uuid": "^3.4.3",
         "@types/winston": "^2.3.8",
-        "concurrently": "^3.5.1",
-        "apidoc": "0.17.6",
+        "apidoc": "^0.28.1",
         "apidoc-markdown2": "0.3.6",
+        "concurrently": "^3.5.1",
+        "depcheck": "^1.4.2",
+        "nodemon": "^2.0.8",
         "shelljs": "^0.8.1",
         "tslint": "^5.9.1",
-        "nodemon": "^1.15.1",
-        "typescript": "^2.7.2",
-        "depcheck": "^0.6.8"
+        "typescript": "^4.3.4"
     }
 }
